debug-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  namespace: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      tolerations:
        - key: "eks.amazonaws.com/fargate-profile"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name:  post-service
          image: 617287375832.dkr.ecr.eu-north-1.amazonaws.com/posts-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
