deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service         #  this name of pod  inside container  
  namespace: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service      #     manage  only oids that have lable  post-service 
  template:
    metadata:
      labels:
        app: post-service   #  “Send traffic to pods with this label.” this goes in service.yaml file 
    spec:
      tolerations:
        - key: "eks.amazonaws.com/fargate-profile"
          operator: "Exists"
          effect: "NoSchedule"
      serviceAccountName: post-service-sa
      containers:
        - name:  post-service
          image: 617287375832.dkr.ecr.eu-north-1.amazonaws.com/posts-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
