post-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: post-service
  namespace: blog-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: post-service

  template:
    metadata:
      labels:
        app: post-service

    spec:
      containers:
        - name: post-service
          image: posts-service:2.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8082
