posts-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: post-service
  namespace: blog-app

spec:
  type: ClusterIP

  selector:
    app: post-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
