ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: springboot-ingress
  namespace: blog-app

spec:
  ingressClassName: nginx

  rules:
  - host: spring.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 80
